--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
-.App {
-  text-align: center;
-}
 
+body{
+  margin:0;
+  padding: 0;
+}
+h1{
+  color: wheat;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -13,20 +17,8 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
+
 
 @keyframes App-logo-spin {
   from {
