--- a/src/Components/moviDetails/movidetils.css
+++ b/src/Components/moviDetails/movidetils.css
@@ -36,7 +36,7 @@
 }
 
 .movie__detailRight {
-    color: white;
+    color:#898fe1;
     display: flex;
     flex-direction: column;
     height: 450px;
@@ -133,7 +133,7 @@
 
 
 .movie__productionComapany {
-    width: 200px;
+    width: 130px;
     margin: 2rem;
 }
 
